--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -3,14 +3,14 @@
   "localized-strings": {
     "next": "Next",
     "previous": "Previous",
-    "tagline": "A website for testing",
+    "tagline": "The Diary of Shiyong Yin",
     "doc1": "Latin-ish",
     "Example Page": "Example Page",
     "doc2": "document number 2",
     "doc3": "This is document number 3",
     "doc4": "Other Document",
     "doc5": "Fifth Document",
-    "Blog": "Blog",
+    "Diary": "Diary",
     "Docusaurus": "Docusaurus",
     "First Category": "First Category",
     "Second Category": "Second Category"
