--- a/website/blog/2018-06-07-good-tool.md
+++ b/website/blog/2018-06-07-good-tool.md
@@ -9,3 +9,8 @@ author: Shiyong Yin
 
 ![Irvue](/diary/img/Irvue.jpg)
 
+## PixelStyle
+
+> 感觉是轻量版的PS，App Store上面有下载
+
+![PixelStyle](/diary/img/pixelStyle.jpg)
