--- a/website/blog/2018-06-07-good-tool.md
+++ b/website/blog/2018-06-07-good-tool.md
@@ -7,10 +7,10 @@ author: Shiyong Yin
 
 > 一款好用的Mac壁纸更换工具，App Store上面有下载
 
-![Irvue](/diary/img/Irvue.jpg)
+![Irvue](/diary/img/Irvue.png)
 
 ## PixelStyle
 
 > 感觉是轻量版的PS，App Store上面有下载
 
-![PixelStyle](/diary/img/pixelStyle.jpg)
+![PixelStyle](/diary/img/pixelStyle.png)
