--- a/website/blog/2018-06-07-good-tool.md
+++ b/website/blog/2018-06-07-good-tool.md
@@ -14,3 +14,9 @@ author: Shiyong Yin
 > 感觉是轻量版的PS，App Store上面有下载
 
 ![PixelStyle](/diary/img/pixelStyle.png)
+
+## iTerm2
+
+> Mac下好用的终端工具，[传送门](https://www.iterm2.com/)
+
+![iTerm2](/diary/img/iTerm2.png)
