--- a/website/blog/2018-06-08-version.md
+++ b/website/blog/2018-06-08-version.md
@@ -7,6 +7,10 @@ author: Shiyong Yin
 
 fekit会将所有前端文件的version单独打包到一个ver目录下面，然后通过jar包放到后端目录下面，后端运行代码进行版本号的替换。
 
+## ykit中的version
+
+和fekit基本类似
+
 ## qxf中的version
 
 和fekit基本类似
