--- a/website/blog/2018-06-07-good-npm.md
+++ b/website/blog/2018-06-07-good-npm.md
@@ -3,6 +3,24 @@ title: 好用的npm包
 author: Shiyong Yin
 ---
 
+<div class="update">
+
+## 2018.06.18更
+
+### jest
+
+> javascript代码测试工具
+
+### enzyme
+
+> aribnb出品，用来测试react的库
+
+### prettier
+
+> 有见识的代码格式化工具(甩lint几十条街)
+
+</div>
+
 ## np
 
 > npm包发布工具，不如yarn publish好用
@@ -22,5 +40,10 @@ author: Shiyong Yin
 ## walk, blob
 
 > 遍历文件目录
+
+
+
+
+
 
 
