--- a/website/blog/2018-06-16-CV.md
+++ b/website/blog/2018-06-16-CV.md
@@ -51,7 +51,7 @@ __前端工程师__
 - 了解jquery、html、pug、handlerbars、css
 - 了解node、socket.io、packing、webpack、bash
 - 了解ajax、CORS、http、websocket
-- 了解github、jest、enzyme、circle
+- 了解github、jest、enzyme、circle、eslint
 
 ## 一句话自评
 
