--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -11,6 +11,7 @@
     "doc4": "Other Document",
     "doc5": "Fifth Document",
     "Diary": "Diary",
+    "GitHub": "GitHub",
     "Docusaurus": "Docusaurus",
     "First Category": "First Category",
     "Second Category": "Second Category"
