--- a/website/blog/2018-06-07-good-npm.md
+++ b/website/blog/2018-06-07-good-npm.md
@@ -19,11 +19,15 @@ author: Shiyong Yin
 
 > 有见识的代码格式化工具(甩lint几十条街)
 
+### rimraf
+
+> 相当于终端中的`rm -rf`
+
 </div>
 
 ## np
 
-> npm包发布工具，不如yarn publish好用
+> npm包发布工具，不如`yarn publish`好用
 
 ## inquirer
 
