--- a/website/blog/2018-06-16-CV.md
+++ b/website/blog/2018-06-16-CV.md
@@ -47,11 +47,11 @@ __前端工程师__
 
 - 了解JavaScript、Vue、React、React Native、~~Avalon~~、Angular
 - 了解iview、antd
-- 了解mobx、rxjs、redux
+- 了解__mobx__、rxjs、redux
 - 了解jquery、html、pug、handlerbars、css
-- 了解node、socket.io、packing、webpack、bash
+- 了解node、socket.io、__packing__、webpack、bash
 - 了解ajax、CORS、http、websocket
-- 了解github、jest、enzyme、circle、eslint
+- 了解github、__jest__、enzyme、circle、eslint、__prettier__
 
 ## 一句话自评
 
