--- a/website/blog/2018-06-16-CV.md
+++ b/website/blog/2018-06-16-CV.md
@@ -45,13 +45,13 @@ __前端工程师__
 
 ## 吃饭家伙
 
-- 了解JavaScript、Vue、React、React Native、~~Avalon~~、Angular
-- 了解iview、antd
-- 了解__mobx__、rxjs、redux
-- 了解jquery、html、pug、handlerbars、css
+- 了解github、travis、~~circle~~、__jest__、enzyme、eslint、__prettier__
 - 了解node、socket.io、__packing__、webpack、bash
+- 了解JavaScript、Vue、React、React Native、~~Avalon~~、Angular
+- 了解__mobx__、rxjs、redux
+- 了解iview、antd
 - 了解ajax、CORS、http、websocket
-- 了解github、__jest__、enzyme、circle、eslint、__prettier__
+- 了解jquery、html、pug、handlerbars、css
 
 ## 一句话自评
 
