--- a/website/blog/2018-06-07-good-npm.md
+++ b/website/blog/2018-06-07-good-npm.md
@@ -9,7 +9,7 @@ author: Shiyong Yin
 
 ### jest
 
-> javascript代码测试工具
+> FB出品，javascript代码测试工具
 
 ### enzyme
 
@@ -44,6 +44,10 @@ author: Shiyong Yin
 ## walk, blob
 
 > 遍历文件目录
+
+## docusaurus
+
+> FB出品，与github pages结合，快速构建静态文档和静态博客的网站
 
 
 
