--- a/website/blog/2018-06-16-CV.md
+++ b/website/blog/2018-06-16-CV.md
@@ -3,10 +3,6 @@ title: 个人简历
 author: 尹士勇
 ---
 
-## 求职意向
-
-__前端工程师__
-
 ## 个人简介
 
 ```html
@@ -14,6 +10,10 @@ __前端工程师__
 电话：188 1096 1061                  年龄：1989.05
 邮箱：braveyin168@outlook.com        现居：北京（7月2号以后回成都）
 ```
+
+### 求职意向
+
+__前端工程师__
 
 ## 教育背景
 
@@ -29,7 +29,7 @@ __前端工程师__
 ## 工作经历
 
 ```html
-去哪儿网（2014.07~至今）               职位：前端工程师
+去哪儿网 4年（2014.07~至今）            职位：前端工程师
 
 主要工作内容
 
@@ -46,7 +46,7 @@ __前端工程师__
 ## 吃饭家伙
 
 - 了解github、travis、~~circle~~、__jest__、enzyme、eslint、__prettier__
-- 了解node、socket.io、__packing__、webpack、bash
+- 了解node、socket.io、__packing__、gulp、grunt、webpack、bash
 - 了解JavaScript、Vue、React、React Native、~~Avalon~~、Angular
 - 了解__mobx__、rxjs、redux
 - 了解iview、antd
