--- a/website/blog/2018-06-16-CV.md
+++ b/website/blog/2018-06-16-CV.md
@@ -3,17 +3,17 @@ title: 个人简历
 author: 尹士勇
 ---
 
+
+
 ## 个人简介
 
 ```html
+求职：前端工程师
+
 姓名：尹士勇                          性别：男
 电话：188 1096 1061                  年龄：1989.05
 邮箱：braveyin168@outlook.com        现居：北京（7月2号以后回成都）
 ```
-
-### 求职意向
-
-__前端工程师__
 
 ## 教育背景
 
@@ -21,7 +21,7 @@ __前端工程师__
 西南科技大学（2010.09~2014.07）        计算机科学与技术/学士/本科
 ```
 在校期间
-- ACM团队队员，曾参加学校、四川省程序设计竞赛，并获奖
+- ACM团队队员，曾参加学院、学校、四川省程序设计竞赛，并获奖
 - 重构优化学校OJ系统，主要担任前端开发，并进行了数据库迁移
 
 学校OJ地址：[http://acm.swust.edu.cn/](http://acm.swust.edu.cn/)
@@ -55,7 +55,7 @@ __前端工程师__
 
 ## 一句话自评
 
-基础不错，做事仔细；英语还行，学习能力强。
+基础不错，做事仔细负责；英语还行，学习能力强。
 
 ## 其他
 
