--- a/website/blog/2018-06-16-CV.md
+++ b/website/blog/2018-06-16-CV.md
@@ -7,39 +7,52 @@ author: 尹士勇
 
 ## 个人简介
 
-```html
-求职：前端工程师
+求职：__前端工程师__
 
-姓名：尹士勇                          性别：男
-电话：188 1096 1061                  年龄：1989.05
-邮箱：braveyin168@outlook.com        现居：北京（7月2号以后回成都）
-```
+<p>
+<div class="cv-wrapper">
+<div>姓名：尹士勇</div>
+<div >性别：男</div>
+</div>
+<div class="cv-wrapper">
+<div>电话：188 1096 1061</div>
+<div >年龄：1989.05</div>
+</div>
+<div class="cv-wrapper">
+<div>邮箱：braveyin168@outlook.com</div>
+<div >现居：北京（7月2号以后回成都）</div>
+</div>
+</p>
 
 ## 教育背景
 
-```html
-西南科技大学（2010.09~2014.07）        计算机科学与技术/学士/本科
-```
+<div class="cv-wrapper">
+<div>西南科技大学（2010.09~2014.07）</div>     
+<div>计算机科学与技术/学士/本科</div>
+</div>
+
 在校期间
 - ACM团队队员，曾参加学院、学校、四川省程序设计竞赛，并获奖
 - 重构优化学校OJ系统，主要担任前端开发，并进行了数据库迁移
 
-学校OJ地址：[http://acm.swust.edu.cn/](http://acm.swust.edu.cn/)
+资料
+- 学校OJ地址：[http://acm.swust.edu.cn/](http://acm.swust.edu.cn/)
 
 ## 工作经历
 
-```html
-去哪儿网 4年（2014.07~至今）            职位：前端工程师
+<div class="cv-wrapper">
+<div>去哪儿网 4年（2014.07~至今）</div>     
+<div>职位：前端工程师</div>
+</div>
 
 主要工作内容
+- 2014~2016    供应链系统开发，销售人员使用，内部系统，主要技术Avalon
+- 2016~2016    再出发系统开发，代理商使用，外部系统，主要技术Avalon
+- 2016~2017    QTA系统开发，客服运营使用，内部系统，主要技术Avalon
+- 2017~2017    酒店美食应用开发，客户使用，外部系统，主要技术React Native
+- 2017-至今    音箱商户和运营系统开发，分别为商户和运营使用，主要技术React
 
-2014~2016    供应链系统开发，销售人员使用，内部系统，主要技术Avalon
-2016~2016    再出发系统开发，代理商使用，外部系统，主要技术Avalon
-2016~2017    QTA系统开发，客服运营使用，内部系统，主要技术Avalon
-2017~2017    酒店美食应用开发，客户使用，外部系统，主要技术React Native
-2017-至今    音箱商户和运营系统开发，分别为商户和运营使用，主要技术React
-```
-
+资料
 - 再出发系统地址：[https://www.zcfgoagain.com/](https://www.zcfgoagain.com/)
 - 音箱商户系统地址：[https://easyzhush.qunar.com/](https://easyzhush.qunar.com/)
 
