--- a/website/blog/2018-06-16-CV.md
+++ b/website/blog/2018-06-16-CV.md
@@ -59,7 +59,7 @@ author: 尹士勇
 ## 吃饭家伙
 
 - 了解github、travis、~~circle~~、__jest__、enzyme、eslint、__prettier__
-- 了解node、socket.io、__packing__、gulp、grunt、webpack、bash
+- 了解node、socket.io、__packing__、gulp、grunt、webpack、bash、python、django
 - 了解JavaScript、Vue、React、React Native、~~Avalon~~、Angular
 - 了解__mobx__、rxjs、redux
 - 了解iview、antd
