--- a/website/blog/2018-06-16-CV.md
+++ b/website/blog/2018-06-16-CV.md
@@ -58,13 +58,13 @@ author: 尹士勇
 
 ## 吃饭家伙
 
-- 了解github、travis、~~circle~~、__jest__、enzyme、eslint、__prettier__
-- 了解node、socket.io、__packing__、gulp、grunt、webpack、bash、python、django
-- 了解JavaScript、Vue、React、React Native、~~Avalon~~、Angular
-- 了解__mobx__、rxjs、redux
-- 了解iview、antd
-- 了解ajax、CORS、http、websocket
-- 了解jquery、html、pug、handlerbars、css
+- 掌握JavaScript、Vue、React、React Native、~~Avalon~~、Angular
+- 熟悉github、travis、~~circle~~、__jest__、enzyme、eslint、__prettier__
+- 熟悉node、socket.io、__packing__、gulp、grunt、webpack、bash、python、django
+- 熟悉__mobx__、rxjs、redux
+- 熟悉iview、antd
+- 熟悉ajax、CORS、http、websocket
+- 熟悉jquery、html、pug、handlerbars、css
 
 ## 一句话自评
 
