--- a/website/blog/2018-06-16-CV.md
+++ b/website/blog/2018-06-16-CV.md
@@ -3,11 +3,9 @@ title: 个人简历
 author: 尹士勇
 ---
 
-
-
 ## 个人简介
 
-求职：__前端工程师__
+求职意向：__前端工程师__
 
 <p>
 <div class="cv-wrapper">
@@ -46,11 +44,24 @@ author: 尹士勇
 </div>
 
 主要工作内容
-- 2014~2016    供应链系统开发，销售人员使用，内部系统，主要技术Avalon
-- 2016~2016    再出发系统开发，代理商使用，外部系统，主要技术Avalon
-- 2016~2017    QTA系统开发，客服运营使用，内部系统，主要技术Avalon
-- 2017~2017    酒店美食应用开发，客户使用，外部系统，主要技术React Native
-- 2017-至今    音箱商户和运营系统开发，分别为商户和运营使用，主要技术React
+- 2014~2016    供应链系统开发，销售人员使用，内部系统
+  - 角色：开发小弟
+  - 主要使用avalon进行业务需求开发
+  - 重构过部分老代码，推动文件结构的改进，上传图片等avalon插件的开发
+- 2016~2016    再出发系统开发，代理商使用，外部系统
+  - 角色：开发主力（项目前期参与项目结构与代码规范的建设）
+  - 主要开发业务中重用的插件，如面包屑、国家省市区选择等avalon插件
+  - 业务需求开发
+- 2016~2017    QTA系统开发，客服运营使用，内部系统
+  - 角色：开发者
+  - 主要进行业务需求开发
+- 2017~2017    酒店美食应用开发，客户使用，外部系统
+  - 角色：开发主力
+  - 倡导组件堆叠开发模式，最大化复用代码
+- 2017-至今    音箱商户和运营系统开发，分别为商户和运营使用
+  - 角色：前端负责人
+  - 追求舒服的开发体验，负责项目的搭建，构建，发布
+  - antd的Form太难用，自己基于antd开发了一套好用的q-antd
 
 资料
 - 再出发系统地址：[https://www.zcfgoagain.com/](https://www.zcfgoagain.com/)
