--- a/website/blog/2018-06-16-CV.md
+++ b/website/blog/2018-06-16-CV.md
@@ -51,19 +51,20 @@ author: 尹士勇
 - 2016~2016    再出发系统开发，代理商使用，外部系统
   - 角色：开发主力（项目前期参与项目结构与代码规范的建设）
   - 主要开发业务中重用的插件，如面包屑、国家省市区选择等avalon插件
-  - 业务需求开发
 - 2016~2017    QTA系统开发，客服运营使用，内部系统
   - 角色：开发者
   - 主要进行业务需求开发
 - 2017~2017    酒店美食应用开发，客户使用，外部系统
   - 角色：开发主力
   - 倡导组件堆叠开发模式，最大化复用代码
+  - 开发易用常用的的组件，如text、card、head、page等
 - 2017-至今    音箱商户和运营系统开发，分别为商户和运营使用
   - 角色：前端负责人
-  - 追求舒服的开发体验，负责项目的搭建，构建，发布
+  - 追求简洁舒服的开发体验，负责项目的搭建、构建和发布
   - antd的Form太难用，自己基于antd开发了一套好用的q-antd
 
 资料
+- q-antd包地址：[https://yarnpkg.com/zh-Hans/package/q-antd](https://yarnpkg.com/zh-Hans/package/q-antd)
 - 再出发系统地址：[https://www.zcfgoagain.com/](https://www.zcfgoagain.com/)
 - 音箱商户系统地址：[https://easyzhush.qunar.com/](https://easyzhush.qunar.com/)
 
@@ -84,6 +85,5 @@ author: 尹士勇
 ## 其他
 
 - 一个PR：[https://github.com/react-component/calendar/pull/349](https://github.com/react-component/calendar/pull/349)
-- 一个NPM包：[https://yarnpkg.com/zh-Hans/package/q-antd](https://yarnpkg.com/zh-Hans/package/q-antd)
 - 一个开发文档：[https://ysyfff.github.io/merchant-fe-doc/docs/notice.html](https://ysyfff.github.io/merchant-fe-doc/docs/notice.html)
 - 一个日记：[https://ysyfff.github.io/diary/blog/](https://ysyfff.github.io/diary/blog/)
