--- a/website/blog/2018-06-16-CV.md
+++ b/website/blog/2018-06-16-CV.md
@@ -65,6 +65,7 @@ author: 尹士勇
 
 资料
 - q-antd包地址：[https://yarnpkg.com/zh-Hans/package/q-antd](https://yarnpkg.com/zh-Hans/package/q-antd)
+  - __本周下载量11K，最高周下载量17K__
 - 再出发系统地址：[https://www.zcfgoagain.com/](https://www.zcfgoagain.com/)
 - 音箱商户系统地址：[https://easyzhush.qunar.com/](https://easyzhush.qunar.com/)
 
