--- a/website/blog/2018-06-16-CV.md
+++ b/website/blog/2018-06-16-CV.md
@@ -87,5 +87,8 @@ author: 尹士勇
 ## 其他
 
 - 一个PR：[https://github.com/react-component/calendar/pull/349](https://github.com/react-component/calendar/pull/349)
+  - 在日历的每月最后一天加上last-day-of-month类选择器
 - 一个开发文档：[https://ysyfff.github.io/merchant-fe-doc/docs/notice.html](https://ysyfff.github.io/merchant-fe-doc/docs/notice.html)
+  - 音箱项目工程的开发文档
 - 一个日记：[https://ysyfff.github.io/diary/blog/](https://ysyfff.github.io/diary/blog/)
+  - 个人日记，记录博客和日常问题
