--- a/website/blog/2018-06-16-CV.md
+++ b/website/blog/2018-06-16-CV.md
@@ -2,75 +2,45 @@
 title: 个人简历
 author: 尹士勇
 ---
+# 尹士勇
 
-## 个人简介
-
-求职意向：__前端工程师__
-
-<p>
+__求职意向：前端工程师__
 <div class="cv-wrapper">
-<div>姓名：尹士勇</div>
-<div >性别：男</div>
-</div>
-<div class="cv-wrapper">
-<div>电话：188 1096 1061</div>
-<div >年龄：1989.05</div>
+<div>电话：(0)188-1096-1061</div>
+<div>性别：男</div>
 </div>
 <div class="cv-wrapper">
 <div>邮箱：braveyin168@outlook.com</div>
-<div >现居：北京（7月2号以后回成都）</div>
+<div >地址：成都市天府新区</div>
 </div>
-</p>
+
+
 
 ## 教育背景
 
 <div class="cv-wrapper">
-<div>西南科技大学（2010.09~2014.07）</div>     
-<div>计算机科学与技术/学士/本科</div>
+<div>2010.09~2014.07</div>
+<div>西南科技大学</div>     
+<div style="flex: 2">计算机科学与技术/本科</div>
 </div>
-
-在校期间
-- ACM团队队员，曾参加学院、学校、四川省程序设计竞赛，并获奖
-- 重构优化学校OJ系统，主要担任前端开发，并进行了数据库迁移
-
-资料
-- 学校OJ地址：[http://acm.swust.edu.cn/](http://acm.swust.edu.cn/)
 
 ## 工作经历
 
 <div class="cv-wrapper">
-<div>去哪儿网 4年（2014.07~至今）</div>     
-<div>职位：前端工程师</div>
+<div>2014.07~至今</div>
+<div>去哪儿网&middot;大住宿</div>     
+<div>前端工程师</div>
+<div>北京</div>
 </div>
 
-主要工作内容
-- 2014~2016    供应链系统开发，销售人员使用，内部系统
-  - 角色：开发小弟
-  - 主要使用avalon进行业务需求开发
-  - 重构过部分老代码，推动文件结构的改进，上传图片等avalon插件的开发
-- 2016~2016    再出发系统开发，代理商使用，外部系统
-  - 角色：开发主力（项目前期参与项目结构与代码规范的建设）
-  - 主要开发业务中常用的插件，如面包屑、国家省市区选择等avalon插件
-- 2016~2017    QTA系统开发，客服运营使用，内部系统
-  - 角色：开发者
-  - 主要进行业务需求开发
-- 2017~2017    酒店美食应用开发，客户使用，外部系统
-  - 角色：开发主力
-  - 倡导组件堆叠开发模式，最大化复用代码
-  - 开发易用常用的的组件，如text、card、head、page、coupon等
-- 2017-至今    音箱商户和运营系统开发，分别为商户和运营使用
-  - 角色：前端负责人
-  - 追求简洁舒服的开发体验，负责项目的搭建、构建和发布
-  - 向packing作者提出根据index.js智能化自动生成模板和配置路由的建议
-  - antd的Form太难用，自己基于antd开发了一套好用的q-antd
+- 去哪儿网（Qunar.com）是中国领先的无线和在线旅游平台
+- 参与__5__个web网站，__1__个公众号和__1__个React Native项目的开发，并作为其中一个web网站的前端负责人
+- 设计开发自定义配置任务模板系统，支持input、radio、checkbox、date、upload等__9__种常用表单元素的添加，并支持各个表单元素的选项配置以及是否必填设置。此模板系统将运营的工作效率提高了__100__%，节省了__50__%的运营成本，受到上层的一致好评，并获得CEQ优秀项目，奖金__10,000__元
+- 设计开发了一个npm包——q-antd来解决antd表单元素以及Form组件难用的痛点(最高周下载量__17,000__)。此包提高项目开发效率__40%__，提高项目易维护性__40%__
 
-资料
-- q-antd包地址：[https://www.npmjs.com/package/q-antd](https://www.npmjs.com/package/q-antd)
-  - __本周下载量11K，最高周下载量17K__
-- 再出发系统地址：[https://www.zcfgoagain.com/](https://www.zcfgoagain.com/)
-- 音箱商户系统地址：[https://easyzhush.qunar.com/](https://easyzhush.qunar.com/)
+- 向packing作者提出自动生成模板和配置路由的建议，将新建页面时配置模板和路由的错误率将为__0__，节省了新建一个页面__50__%的时间
 
-## 吃饭家伙
+## 工作技能
 
 - 掌握JavaScript、Vue、React、React Native、~~Avalon~~、Angular
 - 熟悉github、travis、~~circle~~、__jest__、enzyme、eslint、__prettier__
@@ -84,11 +54,4 @@ author: 尹士勇
 
 基础不错，做事仔细负责；英语还行，学习能力强。
 
-## 其他
 
-- 一个PR：[https://github.com/react-component/calendar/pull/349](https://github.com/react-component/calendar/pull/349)
-  - 在日历的每月最后一天加上last-day-of-month类选择器
-- 一个开发文档：[https://ysyfff.github.io/merchant-fe-doc/docs/notice.html](https://ysyfff.github.io/merchant-fe-doc/docs/notice.html)
-  - 音箱项目工程的开发文档
-- 一个日记：[https://ysyfff.github.io/diary/blog/](https://ysyfff.github.io/diary/blog/)
-  - 个人日记，记录博客和日常问题
