--- a/website/blog/2018-06-16-CV.md
+++ b/website/blog/2018-06-16-CV.md
@@ -50,8 +50,7 @@ __求职意向：前端工程师__
 - 熟悉ajax、CORS、http、websocket
 - 熟悉jquery、html、pug、handlerbars、css
 
-## 一句话自评
+## 自我评价
 
-基础不错，做事仔细负责；英语还行，学习能力强。
-
+喜欢逛github，研究优秀的项目，从中学习新知识和牛逼的地方
 
