--- a/website/blog/2018-06-16-CV.md
+++ b/website/blog/2018-06-16-CV.md
@@ -34,7 +34,7 @@ __求职意向：前端工程师__
 </div>
 
 - 去哪儿网（Qunar.com）是中国领先的无线和在线旅游平台
-- 参与__5__个web网站，__1__个微信公众号和__1__个React Native项目的开发，并作为其中一个web网站的前端负责人
+- 参与__5__个web网站，__1__个微信公众号和__1__个React Native项目的开发，并作为其中一个web网站的<span class="centers">前端负责人</span>
 - 设计开发自定义配置任务模板系统，支持input、radio、checkbox、date、upload等__9__种常用表单元素的添加，并支持各个表单元素的选项配置以及是否必填设置。此模板系统将运营的工作效率提高了__100__%，节省了__50__%的运营成本，受到上层的一致好评，并获得CEQ优秀项目奖，奖金__10,000__元
 - 设计开发了一个npm包——q-antd来解决antd表单元素以及Form组件难用的痛点(最高周下载量__17,000__)。此包提高项目开发效率__40%__，提高项目易维护性__40%__
 
