--- a/website/blog/2018-06-16-CV.md
+++ b/website/blog/2018-06-16-CV.md
@@ -38,7 +38,7 @@ __求职意向：前端工程师__
 - 设计开发自定义配置任务模板系统，支持input、radio、checkbox、date、upload等__9__种常用表单元素的添加，并支持各个表单元素的选项配置以及是否必填设置。此模板系统将运营的工作效率提高了__100__%，节省了__50__%的运营成本，受到上层的一致好评，并获得CEQ优秀项目奖，奖金__10,000__元
 - 设计开发了一个npm包——q-antd来解决antd表单元素以及Form组件难用的痛点(最高周下载量__17,000__)。此包提高项目开发效率__40%__，提高项目易维护性__40%__
 
-- 向packing作者提出自动生成模板和配置路由的建议，将新建页面时配置模板和路由的错误率将为__0__，节省了新建一个页面__50__%的时间
+- 向packing作者提出自动生成模板和配置路由的建议，将新建页面时配置模板和路由的错误率降为__0__，节省了新建一个页面__50__%的时间
 
 ## 工作技能
 
