--- a/website/blog/2018-06-16-CV.md
+++ b/website/blog/2018-06-16-CV.md
@@ -54,3 +54,21 @@ __求职意向：前端工程师__
 
 喜欢逛github，研究优秀的项目，从中学习新知识和牛逼的地方
 
+<style>
+  .fixedHeaderContainer,
+.postHeader,
+#docsNav,
+.onPageNav,
+.blog-recent,
+.nav-footer {
+    display: none;
+}
+.navPusher,
+.blogContainer .lonePost {
+    padding-top: 0;
+}
+.sideNavVisible .wrapper {
+    max-width: 860px !important;
+}
+</style>
+
