--- a/website/blog/2018-06-07-good-npm.md
+++ b/website/blog/2018-06-07-good-npm.md
@@ -5,6 +5,28 @@ author: Shiyong Yin
 
 <div class="update">
 
+## 2018.06.20更
+
+### node-xlsx
+
+> 如题
+
+### colors
+
+> 终端输出彩色字体
+
+### opencc
+
+> 处理中文简繁转换
+
+### json5
+
+> 是JSON的超级，根据ES5.1扩展了很多JSON不支持的特性
+
+</div>
+
+<div class="update">
+
 ## 2018.06.18更
 
 ### jest
