--- a/website/blog/2018-06-16-CV.md
+++ b/website/blog/2018-06-16-CV.md
@@ -75,6 +75,7 @@ __求职意向：前端工程师__
 }
 .sideNavVisible .wrapper {
     max-width: 860px !important;
+    min-width: 510px;
 }
 #back-to-top{
   background: #333;
