--- a/website/blog/2018-06-16-CV.md
+++ b/website/blog/2018-06-16-CV.md
@@ -33,19 +33,24 @@ __求职意向：前端工程师__
 <div>北京</div>
 </div>
 
-- 去哪儿是中国领先的旅游搜索引擎，去哪儿是目前全球最大的中文在线旅行网站
+> 去哪儿是中国领先的旅游搜索引擎，去哪儿是目前全球最大的中文在线旅行网站
 
-- 参与__5__个web网站、__1__个微信公众号、__1__个H5和__2__个React Native项目的开发，目前为一个web网站的<span class="centers">前端负责人</span>
+技术上
+- 设计开发任务模板系统，提高运营效率__100__%，省__50__%成本，获年度优秀项目奖(__10,000__元)
 
-- 设计开发自定义配置任务模板系统，支持input、radio、checkbox、date、upload等__9__种常用表单元素的添加，并支持各个表单元素的选项配置以及是否必填设置。此模板系统将运营的工作效率提高了__100__%，节省了__50__%的运营成本，受到上层的一致好评，并获得CEQ优秀项目奖，奖金__10,000__元
+- 设计开发npm包q-antd，提高项目开发效率__30__%，提高项目易维护性__30__%
 
-- 设计开发了一个npm包——q-antd(最高周下载量__17,000__)来解决antd表单元素以及Form组件难用的痛点。此包提高项目开发效率__30__%，提高项目易维护性__30__%
+- 优化去哪儿前端构建工具packing，新建页面错误率降为__0__，新建页面节省__50__%时间
 
-- 向packing作者提出自动生成模板和配置路由的建议，将新建页面时配置模板和路由的错误率降为__0__，节省了新建一个页面__50__%的时间
+- 设计开发grunt-i19n插件，准确率提高到__100__%，节省__50__%工作时间
 
-- 根据业务场景开发grunt-i19n插件，将纯人工工作转化为计算机工作，将准确率提高到__100__%，节省__50__%的工作时间
+业务上
+- 参与__5__个web网站、__1__个公众号、__1__个H5和__2__个RN项目的开发，目前为<span class="centers">前端负责人</span>
 
-- 酒店业务华为对接。这其中牵涉到华为测试、酒店测试、QTA测试等__10__多个小组近__30__人的团队协作。我积极主动的团结协调各路人马，克服空间的限制，推动项目的发展，按时交付项目
+- 酒店业务华为对接，协调团结__10__多个小组近__30__人，推动项目的发展，按时交付
+
+
+
 
 
 ## 工作技能
@@ -81,6 +86,13 @@ __求职意向：前端工程师__
 }
 #back-to-top{
   background: #333;
+}
+blockquote{
+  border-left-color: #333;
+  background: #d8d8d8;
+}
+.centers {
+    background: #d8d8d8;
 }
 </style>
 
