--- a/website/blog/2018-06-16-CV.md
+++ b/website/blog/2018-06-16-CV.md
@@ -35,6 +35,11 @@ __求职意向：前端工程师__
 
 > 去哪儿是中国领先的旅游搜索引擎，去哪儿是目前全球最大的中文在线旅行网站
 
+业务上
+- 参与__5__个web网站、__1__个公众号、__1__个H5和__2__个RN项目的开发，目前为<span class="centers">前端负责人</span>
+
+- 酒店业务华为对接，协调团结__10__多个小组近__30__人，推动项目的发展，按时交付
+
 技术上
 - 设计开发任务模板系统，提高运营效率__100__%，省__50__%成本，获年度优秀项目奖(__10,000__元)
 
@@ -44,14 +49,7 @@ __求职意向：前端工程师__
 
 - 设计开发grunt-i19n插件，准确率提高到__100__%，节省__50__%工作时间
 
-业务上
-- 参与__5__个web网站、__1__个公众号、__1__个H5和__2__个RN项目的开发，目前为<span class="centers">前端负责人</span>
-
-- 酒店业务华为对接，协调团结__10__多个小组近__30__人，推动项目的发展，按时交付
-
-
-
-
+爱折腾，知识面广，吸收了travis和jest等优秀项目使得开发效率、正确率和规范化大大提高
 
 ## 工作技能
 
