--- a/website/blog/2018-06-16-CV.md
+++ b/website/blog/2018-06-16-CV.md
@@ -49,7 +49,7 @@ __求职意向：前端工程师__
 
 - 设计开发grunt-i19n插件，准确率提高到__100__%，节省__50__%工作时间
 
-爱折腾，知识面广，吸收了travis和jest等优秀项目使得开发效率、正确率和规范化大大提高
+爱折腾，知识面广，吸收了travis和jest等使得开发效率、正确率和规范化大大提高
 
 ## 工作技能
 
