--- a/website/blog/2018-06-16-CV.md
+++ b/website/blog/2018-06-16-CV.md
@@ -66,7 +66,7 @@ __求职意向：前端工程师__
 喜欢逛github，研究优秀的项目，从中学习新知识和牛逼的地方
 
 <style scoped>
-  .fixedHeaderContainer,
+  /* .fixedHeaderContainer,
 .postHeader,
 #docsNav,
 .onPageNav,
@@ -91,6 +91,6 @@ blockquote{
 }
 .centers {
     background: #d8d8d8;
-}
+} */
 </style>
 
