--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -5,7 +5,6 @@
     "previous": "Previous",
     "tagline": "The Diary of Shiyong Yin",
     "doc1": "Latin-ish",
-    "Example Page": "Example Page",
     "doc2": "document number 2",
     "doc3": "This is document number 3",
     "doc4": "Other Document",
@@ -14,7 +13,8 @@
     "GitHub": "GitHub",
     "Docusaurus": "Docusaurus",
     "First Category": "First Category",
-    "Second Category": "Second Category"
+    "Second Category": "Second Category",
+    "Example Page": "Example Page"
   },
   "pages-strings": {
     "Help Translate|recruit community translators for your project": "Help Translate",
