--- a/website/blog/2018-06-20-xml-svg.md
+++ b/website/blog/2018-06-20-xml-svg.md
@@ -86,14 +86,21 @@ HTML中如何引入SVG
   <path d="M20,230 Q40,205 50,230 T90,230" fill="none" stroke="blue" stroke-width="5"/>
 </svg>
 
-### 矩形
-
+### 矩形 rect
+- x
+  - 起点x坐标
+- y
+  - 起点y坐标
 - rx
-  - 圆角的x方位的半径
+  - 圆角x方位的半径
 - ry
-  - 圆角的y方位的半径
+  - 圆角方位的半径
+- width
+  - x 方向宽度
+- height
+  - y 方向高度
 
-### 圆形
+### 圆形 circle
 
 - cx
   - 圆心x的位置
@@ -158,27 +165,30 @@ HTML中如何引入SVG
 
 ## 曲线路径
 
-> 绘制平滑曲线的命令有三个，其中两个用来绘制贝塞尔曲线，另外一个用来绘制弧形或者说是圆的一部分
+绘制平滑曲线的命令有三个，其中两个用来绘制贝塞尔曲线，另外一个用来绘制弧形或者说是圆的一部分
 
-> 贝塞尔曲线的类型有很多，但是在path元素里，只存在两种贝塞尔曲线：三次贝塞尔曲线C，和二次贝塞尔曲线Q。
+贝塞尔曲线的类型有很多，但是在path元素里，只存在两种贝塞尔曲线：三次贝塞尔曲线C，和二次贝塞尔曲线Q。
 
-### 贝塞尔曲线
+### 贝塞尔曲线 CSQT
 
-两个命令
-- C
-  - 三次贝塞尔曲线需要定义一个点和两个控制点，所以用C命令创建三次贝塞尔曲线，需要设置三组坐标参数
-- S
+4个命令
+- C C(第一个控制点，第二个控制点，终点)
+  - 三次贝塞尔曲线需要定义一个点和两个__控制点__，所以用C命令创建三次贝塞尔曲线，需要设置三组坐标参数
+- S S(第二个控制点，终点)
   - S命令可以用来创建与之前那些曲线一样的贝塞尔曲线
-    - 如果S命令跟在一个C命令或者另一个S命令的后面，它的第一个控制点，就会被假设成前一个控制点的对称点
+    - 如果S命令跟在一个C命令或者另一个S命令的后面，它的第一个__控制点__，就会被假设成前一个__控制点__的对称点
     - 如果S命令单独使用，前面没有C命令或者另一个S命令，那么它的两个控制点就会被假设为同一个点
-- Q
-- T
+- Q Q(控制点，终点)
+  - 它比三次贝塞尔曲线简单，只需要一个控制点，用来确定起点和终点的曲线斜率。因此它需要两组参数，控制点和终点坐标。
+- T T(终点)
+  - 就像三次贝塞尔曲线有一个S命令，二次贝塞尔曲线有一个差不多的T命令，可以通过更简短的参数，延长二次贝塞尔曲线
 
 ```svg
 C x1 y1, x2 y2, x y (or c dx1 dy1, dx2 dy2, dx dy)
 ```
 这里的最后一个坐标(x,y)表示的是曲线的终点，另外两个坐标是控制点，(x1,y1)是起点的控制点，(x2,y2)是终点的控制点
 
+#### C示例
 ```svg
 <?xml version="1.0" standalone="no"?>
 <svg width="190px" height="160px" version="1.1" xmlns="http://www.w3.org/2000/svg">
@@ -212,6 +222,8 @@ C x1 y1, x2 y2, x y (or c dx1 dy1, dx2 dy2, dx dy)
   <circle cx="50" cy="10" r="2" fill="red"/>
 </svg>
 
+#### S示例
+
 ```svg
 <?xml version="1.0" standalone="no"?>
 <svg width="190px" height="160px" version="1.1" xmlns="http://www.w3.org/2000/svg">
@@ -243,3 +255,753 @@ C x1 y1, x2 y2, x y (or c dx1 dy1, dx2 dy2, dx dy)
   <path d="M 95 80 L 125 150" stroke="blue"/>
   <path d="M 150 150 L 180 80" stroke="blue"/>
 </svg>
+
+```svg
+<?xml version="1.0" standalone="no"?>
+<svg width="190px" height="160px" version="1.1" xmlns="http://www.w3.org/2000/svg">
+  <path d="M10 80 S 40 10, 95 80" stroke="black" fill="transparent"/>
+  <circle cx="10" cy="80" r="2" fill="red"/>
+  <circle cx="40" cy="10" r="2" fill="red"/>
+  <circle cx="95" cy="80" r="2" fill="red"/>
+  <path d="M10 80 L 40 10" stroke="red"/>
+  <path d="M95 80 L 40 10" stroke="red"/>
+</svg>
+```
+> 相同的起始点和终点，相同的控制点，在三次和二次赛贝尔曲线中勾画出来的图形不一样
+
+<?xml version="1.0" standalone="no"?>
+<svg width="390px" height="160px" version="1.1" xmlns="http://www.w3.org/2000/svg">
+  <path d="M10 80 S 40 10, 95 80" stroke="black" fill="transparent"/>
+  <path d="M110 80 Q 140 10, 195 80" stroke="black" fill="transparent"/>
+  <path d="M210 80 S 240 10, 295 80" stroke="black" fill="transparent"/>
+  <circle cx="10" cy="80" r="2" fill="red"/>
+  <circle cx="40" cy="10" r="2" fill="red"/>
+  <circle cx="95" cy="80" r="2" fill="red"/>
+  <path d="M10 80 L 40 10" stroke="red"/>
+  <path d="M95 80 L 40 10" stroke="red"/>
+  <circle cx="110" cy="80" r="2" fill="red"/>
+  <circle cx="140" cy="10" r="2" fill="red"/>
+  <circle cx="195" cy="80" r="2" fill="red"/>
+  <path d="M110 80 L 140 10" stroke="red"/>
+  <path d="M195 80 L 140 10" stroke="red"/>
+  <circle cx="210" cy="80" r="2" fill="red"/>
+  <circle cx="240" cy="10" r="2" fill="red"/>
+  <circle cx="295" cy="80" r="2" fill="red"/>
+  <path d="M210 80 L 240 10" stroke="red"/>
+  <path d="M295 80 L 240 10" stroke="red"/>
+</svg>
+
+
+#### Q示例
+
+
+```svg
+<?xml version="1.0" standalone="no"?>
+<svg width="190px" height="160px" version="1.1" xmlns="http://www.w3.org/2000/svg"">
+  <path d="M10 80 Q 95 10 180 80" stroke="black" fill="transparent"/>
+</svg>
+```
+
+<?xml version="1.0" standalone="no"?>
+<svg width="190px" height="160px" version="1.1" xmlns="http://www.w3.org/2000/svg"">
+  <path d="M10 80 Q 95 10 180 80" stroke="black" fill="transparent"/>
+  <circle cx="10" cy="80" r="2" fill="red"/>
+  <circle cx="95" cy="10" r="2" fill="red"/>
+  <circle cx="180" cy="80" r="2" fill="red"/>
+  <path d="M10 80 L 95 10" stroke="red" />
+  <path d="M180 80 L 95 10" stroke="red" />
+</svg>
+
+#### T示例
+
+```svg
+<?xml version="1.0" standalone="no"?>
+<svg width="190px" height="160px" version="1.1" xmlns="http://www.w3.org/2000/svg">
+  <path d="M10 80 Q 52.5 10, 95 80 T 180 80" stroke="black" fill="transparent"/>
+</svg>
+```
+
+<?xml version="1.0" standalone="no"?>
+<svg width="190px" height="160px" version="1.1" xmlns="http://www.w3.org/2000/svg">
+  <path d="M10 80 Q 52.5 10, 95 80 T 180 80" stroke="black" fill="transparent"/>
+  <path d="M10 158 T 180 158" stroke="black" fill="transparent"/>
+  <circle cx="10" cy="80" r="2" fill="red"/>
+  <circle cx="52.5" cy="10" r="2" fill="red"/>
+  <circle cx="95" cy="80" r="2" fill="red"/>
+  <circle cx="137.5" cy="150" r="2" fill="red"/>
+  <circle cx="180" cy="80" r="2" fill="red"/>
+  <path d="M10 80 L 52.5 10" stroke="red" />
+  <path d="M95 80 L 52.5 10" stroke="red" />
+  <path d="M95 80 L 137.5 150" stroke="blue" />
+  <path d="M180 80 L 137.5 150" stroke="blue" />
+</svg>
+
+### 弧形 A
+
+已知椭圆形的长轴半径和短轴半径，并且已知两个点（在椭圆上），根据半径和两点，可以画出两个椭圆，在每个椭圆上根据两点都可以画出两种弧形。所以，仅仅根据半径和两点，可以画出四种弧形。为了保证创建的弧形唯一，A命令需要用到比较多的参数
+
+```svg
+A rx ry x-axis-rotation large-arc-flag sweep-flag x y
+a rx ry x-axis-rotation large-arc-flag sweep-flag dx dy
+```
+参数解释
+
+- rx x半径
+- ry y半径
+- x-axis-rotation 弧形旋转情况(如下图第一个弧形的椭圆旋转0，第二个旋转-45)
+- large-arc-flag  角度大小
+- sweep-falg      弧线方向
+- x 弧形起点
+- y 弧形终点
+
+```svg
+<?xml version="1.0" standalone="no"?>
+<svg width="320px" height="320px" version="1.1" xmlns="http://www.w3.org/2000/svg">
+  <path d="M10 315
+           L 110 215
+           A 30 50 0 0 1 162.55 162.45
+           L 172.55 152.45
+           A 30 50 -45 0 1 215.1 109.9
+           L 315 10" stroke="black" fill="green" stroke-width="2" fill-opacity="0.5"/>
+</svg>
+```
+<?xml version="1.0" standalone="no"?>
+<svg width="320px" height="320px" version="1.1" xmlns="http://www.w3.org/2000/svg">
+  <path d="M10 315
+           L 110 215
+           A 30 50 0 0 1 162.55 162.45
+           L 172.55 152.45
+           A 30 50 -45 0 1 215.1 109.9
+           L 315 10" stroke="black" fill="green" stroke-width="2" fill-opacity="0.5"/>
+</svg>
+
+```svg
+<?xml version="1.0" standalone="no"?>
+<svg width="325px" height="325px" version="1.1" xmlns="http://www.w3.org/2000/svg">
+  <path d="M80 80
+           A 45 45, 0, 0, 0, 125 125
+           L 125 80 Z" fill="green"/>
+  <path d="M230 80
+           A 45 45, 0, 1, 0, 275 125
+           L 275 80 Z" fill="red"/>
+  <path d="M80 230
+           A 45 45, 0, 0, 1, 125 275
+           L 125 230 Z" fill="purple"/>
+  <path d="M230 230
+           A 45 45, 0, 1, 1, 275 275
+           L 275 230 Z" fill="blue"/>
+</svg>
+```
+<?xml version="1.0" standalone="no"?>
+<svg width="325px" height="325px" version="1.1" xmlns="http://www.w3.org/2000/svg">
+  <path d="M80 80
+           A 45 45, 0, 0, 0, 125 125
+           L 125 80 Z" fill="green"/>
+  <path d="M230 80
+           A 45 45, 0, 1, 0, 275 125
+           L 275 80 Z" fill="red"/>
+  <path d="M80 230
+           A 45 45, 0, 0, 1, 125 275
+           L 125 230 Z" fill="purple"/>
+  <path d="M230 230
+           A 45 45, 0, 1, 1, 275 275
+           L 275 230 Z" fill="blue"/>
+</svg>
+
+## Fill和Stroke属性
+
+fill属性设置对象内部的颜色
+
+stroke属性设置绘制对象的线条的颜色
+
+### 上色 fill stroke
+
+```svg
+<svg>
+<rect x="10" y="10" width="100" height="100" stroke="blue" fill="purple"
+       fill-opacity="0.5" stroke-opacity="0.8"/>
+</svg>
+```
+<svg>
+<rect x="10" y="10" width="100" height="100" stroke="blue" fill="purple"
+       fill-opacity="0.5" stroke-opacity="0.8"/>
+</svg>
+
+### 描边 stroke-line(cap|join|dasharray)
+
+除了颜色属性，还有其他一些属性用来控制绘制描边的方式
+
+- stroke-linecap 描边是以路径为中心线绘制的
+  - butt 用直边结束线段
+  - square 稍微超出实际路径的范围，超出的大小由stroke-width控制
+  - round 示边框的终点是圆角，圆角的半径也是由stroke-width控制的
+- stroke-linejoin 每条折线都是由两个线段连接起来的，连接处的样式由stroke-linejoin属性控制
+  - miter 尖角
+  - round 圆角
+  - bevel 平滑
+- stroke-linedasharray 将虚线类型应用在描边上
+  - stroke-dasharray属性的参数，是一组用逗号分割的数字组成的数列
+  - 注意，和path不一样，这里的数字必须用逗号分割（空格会被忽略）
+  - 每一组数字，第一个用来表示填色区域的长度，第二个用来表示非填色区域的长度。
+
+#### stroke-linecap示例
+```svg
+<?xml version="1.0" standalone="no"?>
+<svg width="160" height="140" xmlns="http://www.w3.org/2000/svg" version="1.1">
+  <line x1="40" x2="120" y1="20" y2="20" stroke="black" stroke-width="20" stroke-linecap="butt"/>
+  <line x1="40" x2="120" y1="60" y2="60" stroke="black" stroke-width="20" stroke-linecap="square"/>
+  <line x1="40" x2="120" y1="100" y2="100" stroke="black" stroke-width="20" stroke-linecap="round"/>
+</svg>
+```
+
+<?xml version="1.0" standalone="no"?>
+<svg width="160" height="140" xmlns="http://www.w3.org/2000/svg" version="1.1">
+  <line x1="40" x2="120" y1="20" y2="20" stroke="black" stroke-width="20" stroke-linecap="butt"/>
+  <path d="M40 20 L 120 20" stroke="red" />
+  <line x1="40" x2="120" y1="60" y2="60" stroke="black" stroke-width="20" stroke-linecap="square"/>
+  <path d="M40 60 H 120" stroke="red" />
+  <line x1="40" x2="120" y1="100" y2="100" stroke="black" stroke-width="20" stroke-linecap="round"/>
+  <path d="M40 100 H 120" stroke="red" />
+</svg>
+
+#### stroke-linejoin示例
+
+```svg
+<?xml version="1.0" standalone="no"?>
+<svg width="160" height="280" xmlns="http://www.w3.org/2000/svg" version="1.1">
+  <polyline points="40 60 80 20 120 60" stroke="black" stroke-width="20"
+      stroke-linecap="butt" fill="none" stroke-linejoin="miter"/>
+  <polyline points="40 140 80 100 120 140" stroke="black" stroke-width="20"
+      stroke-linecap="round" fill="none" stroke-linejoin="round"/>
+  <polyline points="40 220 80 180 120 220" stroke="black" stroke-width="20"
+      stroke-linecap="square" fill="none" stroke-linejoin="bevel"/>
+</svg>
+```
+
+<?xml version="1.0" standalone="no"?>
+<svg width="160" height="280" xmlns="http://www.w3.org/2000/svg" version="1.1">
+  <polyline points="40 60 80 20 120 60" stroke="black" stroke-width="20"
+      stroke-linecap="butt" fill="none" stroke-linejoin="miter"/>
+  <polyline points="40 140 80 100 120 140" stroke="black" stroke-width="20"
+      stroke-linecap="round" fill="none" stroke-linejoin="round"/>
+  <polyline points="40 220 80 180 120 220" stroke="black" stroke-width="20"
+      stroke-linecap="square" fill="none" stroke-linejoin="bevel"/>
+</svg>
+
+#### stroke-linedasharray示例
+
+```svg
+<?xml version="1.0" standalone="no"?>
+<svg width="200" height="120" xmlns="http://www.w3.org/2000/svg" version="1.1">
+  <path d="M 10 75 Q 50 10 100 75 T 190 75" stroke="black"
+    stroke-linecap="round" stroke-dasharray="5,15,5" fill="none"/>
+  <path d="M 10 75 L 190 75" stroke="red"
+    stroke-linecap="round" stroke-width="1" stroke-dasharray="1,2,3,4,5" fill="none"/>
+</svg>
+```
+
+<?xml version="1.0" standalone="no"?>
+<svg width="200" height="120" xmlns="http://www.w3.org/2000/svg" version="1.1">
+  <path d="M 10 75 Q 50 10 100 75 T 190 75" stroke="black"
+    stroke-linecap="round" stroke-dasharray="5,15,5" fill="none"/>
+  <path d="M 10 75 L 190 75" stroke="red"
+    stroke-linecap="round" stroke-width="1" stroke-dasharray="1,2,3,4,5" fill="none"/>
+</svg>
+
+解释说明
+- 第一个例子，该路径首先渲染5个填色单位，10个空白单位，5个填色单位，然后回头以这3个数字做一次循环，但是这次是创建5个空白单位，10个填色单位，5个空白单位。通过这两次循环得到偶数模式，并将这个偶数模式不断重复。
+- 第二个例子，先做5个像素单位的填色，紧接着是5个空白单位，然后又是5个单位的填色。如果你想要更复杂的虚线模式，你可以定义更多的数字
+
+## 使用CSS
+
+ 除了定义对象的属性外，你也可以通过CSS来样式化填充和描边。语法和在html里使用CSS一样，只不过你要把background-color、border改成fill和stroke。
+
+ 注意，不是所有的属性都能用CSS来设置。上色和填充的部分一般是可以用CSS来设置的，比如fill，stroke，stroke-dasharray等，但是不包括下面会提到的渐变和图案等功能。另外，width、height，以及路径的命令等等，都不能用css设置。判断它们能不能用CSS设置还是比较容易的。
+
+> [SVG规范](http://www.w3.org/TR/SVG/propidx.html)将属性区分成properties和其他attributes，前者是可以用CSS设置的，后者不能。
+
+3种CSS用法
+1. CSS可以利用style属性插入到元素的行间
+
+    ```svg
+    <svg>
+    <rect x="10" height="180" y="10" width="180" style="stroke: black; fill: red;"/>
+    </svg>
+    ```
+
+    <svg>
+    <rect x="10" height="180" y="10" width="180" style="stroke: black; fill: red;"/>
+    </svg>
+
+2. 利用`<style>`设置一段样式段落。就像在`<html>`里这样的`<style>`一般放在`<head>`里，在svg里`<style>`则放在`<defs>`标签里。`<defs>`表示定义，这里面可以定义一些不会在SVG图形中出现、但是可以被其他元素使用的元素。__同样可以使用hover__
+
+    ```svg
+    <?xml version="1.0" standalone="no"?>
+    <svg width="200" height="200" xmlns="http://www.w3.org/2000/svg" version="1.1">
+      <defs>
+        <style type="text/css"><![CDATA[
+          #MyRect {
+            stroke: black;
+            fill: red;
+          }
+        ]]></style>
+      </defs>
+      <rect x="10" height="180" y="10" width="180" id="MyRect"/>
+    </svg>
+    ```
+
+    <?xml version="1.0" standalone="no"?>
+    <svg width="200" height="200" xmlns="http://www.w3.org/2000/svg" version="1.1">
+      <defs>
+        <style type="text/css"><![CDATA[
+          #MyRect {
+            stroke: black;
+            fill: red;
+          }
+          #MyRect:hover {
+            stroke: black;
+            fill: blue;
+          }
+        ]]></style>
+      </defs>
+      <rect x="10" height="180" y="10" width="180" id="MyRect"/>
+    </svg>
+
+3. 你也可以定义一个外部的样式表
+
+    ```svg
+    <?xml version="1.0" standalone="no"?>
+    <?xml-stylesheet type="text/css" href="style.css"?>
+
+    <svg width="200" height="50" xmlns="http://www.w3.org/2000/svg" version="1.1">
+      <rect height="10" width="10" id="MyRect2"/>
+    </svg>
+    ```
+
+    <?xml version="1.0" standalone="no"?>
+    <?xml-stylesheet type="text/css" href="style.css"?>
+
+    <svg width="200" height="50" xmlns="http://www.w3.org/2000/svg" version="1.1">
+      <rect height="10" width="10" id="MyRect2"/>
+    </svg>
+
+
+## 渐变
+
+并非只能简单填充颜色和描边，更令人兴奋的是，你还可以创建和并在填充和描边上应用渐变色。
+
+有两种类型的渐变：线性渐变和径向渐变。你必须给渐变内容指定一个id属性，否则文档内的其他元素就不能引用它。为了让渐变能被重复使用，渐变内容需要定义在`<defs>`标签内部，而不是定义在形状上面
+
+### 线性渐变
+
+线性渐变沿着直线改变颜色，要插入一个线性渐变，你需要在SVG文件的`<defs>`元素内部，创建一个`<linearGradient>` 节点。
+
+```svg
+<?xml version="1.0" standalone="no"?>
+<svg width="120" height="240" version="1.1" xmlns="http://www.w3.org/2000/svg">
+  <defs>
+      <linearGradient id="Gradient1">
+        <stop class="stop1" offset="0%"/>
+        <stop class="stop2" offset="50%"/>
+        <stop class="stop3" offset="100%"/>
+      </linearGradient>
+      <linearGradient id="Gradient2" x1="0" x2="0" y1="0" y2="1">
+        <stop offset="0%" stop-color="red"/>
+        <stop offset="50%" stop-color="black" stop-opacity="0"/>
+        <stop offset="100%" stop-color="blue"/>
+      </linearGradient>
+      <style type="text/css"><![CDATA[
+        #rect1 { fill: url(#Gradient1); }
+        .stop1 { stop-color: red; }
+        .stop2 { stop-color: black; stop-opacity: 0; }
+        .stop3 { stop-color: blue; }
+      ]]></style>
+  </defs>
+  <rect id="rect1" x="10" y="10" rx="15" ry="15" width="100" height="100"/>
+  <rect x="10" y="120" rx="15" ry="15" width="100" height="100" fill="url(#Gradient2)"/>
+</svg>
+```
+<?xml version="1.0" standalone="no"?>
+<svg width="120" height="240" version="1.1" xmlns="http://www.w3.org/2000/svg">
+  <defs>
+      <linearGradient id="Gradient1">
+        <stop class="stop1" offset="0%"/>
+        <stop class="stop2" offset="50%"/>
+        <stop class="stop3" offset="100%"/>
+      </linearGradient>
+      <linearGradient id="Gradient2" x1="0" x2="0" y1="0" y2="1">
+        <stop offset="0%" stop-color="red"/>
+        <stop offset="50%" stop-color="black" stop-opacity="0"/>
+        <stop offset="100%" stop-color="blue"/>
+      </linearGradient>
+      <style type="text/css"><![CDATA[
+        #rect1 { fill: url(#Gradient1); }
+        .stop1 { stop-color: red; }
+        .stop2 { stop-color: black; stop-opacity: 0; }
+        .stop3 { stop-color: blue; }
+      ]]></style>
+  </defs>
+  <rect id="rect1" x="10" y="10" rx="15" ry="15" width="100" height="100"/>
+  <rect x="10" y="120" rx="15" ry="15" width="100" height="100" fill="url(#Gradient2)"/>
+</svg>
+
+以上是一个应用了线性渐变的`<rect>`元素的示例。线性渐变内部有几个`<stop>` 结点，这些结点通过指定位置的offset（偏移）属性和stop-color（颜色中值）属性来说明在渐变的特定位置上应该是什么颜色；可以直接指定这两个属性值，也可以通过CSS来指定他们的值，该例子中混合使用了这两种方法.
+
+使用渐变时，我们需要在一个对象的属性fill或属性stroke中引用它，这跟你在CSS中使用url引用元素的方法一样。在本例中，url只是一个渐变的引用，我们已经给这个渐变一个ID——“Gradient”。要想附加它，将属性fill设置为url(#Gradient)即可。现在对象就变成多色的了，也可以用同样的方式处理stroke。
+
+`<linearGradient>`元素还需要一些其他的属性值，它们指定了渐变的大小和出现范围。渐变的方向可以通过两个点来控制，它们分别是属性x1、x2、y1和y2，这些属性定义了渐变路线走向。渐变色默认是水平方向的，但是通过修改这些属性，就可以旋转该方向。下例中的Gradient2创建了一个垂直渐变。
+
+> 注意: 你也可以在渐变上使用xlink:href属性。如果使用了该属性时，一个渐变的属性和颜色中值（stop）可以被另一个渐变包含引用。在下例中，你就不需要再Grandient2中重新创建全部的颜色中值（stop）。
+```svg
+<linearGradient id="Gradient1">
+   <stop id="stop1" offset="0%"/>
+   <stop id="stop2" offset="50%"/>
+   <stop id="stop3" offset="100%"/>
+ </linearGradient>
+ <linearGradient id="Gradient2" x1="0" x2="0" y1="0" y2="1"
+    xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#Gradient1"/>
+```
+
+### 径向渐变
+
+径向渐变与线性渐变相似，只是它是从一个点开始发散绘制渐变。创建径向渐变需要在文档的defs中添加一个`<radialGradient>`元素.
+
+stops的使用方法与之前一致，但是现在这个对象的颜色是中间是红色的，且向着边缘的方向渐渐的变成蓝色。跟线性渐变一样，`<radialGradient>` 节点可以有多个属性来描述其位置和方向，但是它更加复杂。
+
+
+> cx、cy、fx、fy和r的取值范围0-1，也就是宽度和高度的比率，参考[gradientUnits](#gradientunits)
+
+cx，cy表示渐变的中心点，r表示渐变的半径，这三者构成了__渐变区域__。fx，fy表示渐变区域的焦点。
+- 若无fx，fy属性，则fx，fy和cx，cy重叠
+- 若有fx，fy属性，fx，fy的取值点不能超出__渐变区域__，否则无法渐变。
+
+#### 示例
+
+```svg
+<?xml version="1.0" standalone="no"?>
+<svg width="120" height="240" version="1.1" xmlns="http://www.w3.org/2000/svg">
+  <defs>
+      <radialGradient id="RadialGradient1">
+        <stop offset="0%" stop-color="red"/>
+        <stop offset="100%" stop-color="blue"/>
+      </radialGradient>
+      <radialGradient id="RadialGradient2" cx="0.25" cy="0.25" r="0.25">
+        <stop offset="0%" stop-color="red"/>
+        <stop offset="100%" stop-color="blue"/>
+      </radialGradient>
+  </defs>
+  <rect x="10" y="10" rx="15" ry="15" width="100" height="100" fill="url(#RadialGradient1)"/> 
+  <rect x="10" y="120" rx="15" ry="15" width="100" height="100" fill="url(#RadialGradient2)"/> 
+</svg>
+```
+
+<?xml version="1.0" standalone="no"?>
+<svg width="120" height="240" version="1.1" xmlns="http://www.w3.org/2000/svg">
+  <defs>
+      <radialGradient id="RadialGradient1">
+        <stop offset="0%" stop-color="red"/>
+        <stop offset="100%" stop-color="blue"/>
+      </radialGradient>
+      <radialGradient id="RadialGradient2" cx="0.25" cy="0.25" r="0.25">
+        <stop offset="0%" stop-color="red"/>
+        <stop offset="100%" stop-color="blue"/>
+      </radialGradient>
+  </defs>
+  <rect x="10" y="10" rx="15" ry="15" width="100" height="100" fill="url(#RadialGradient1)"/> 
+  <rect x="10" y="120" rx="15" ry="15" width="100" height="100" fill="url(#RadialGradient2)"/> 
+</svg>
+
+#### 中心和焦点
+
+
+```svg
+<?xml version="1.0" standalone="no"?>
+<svg width="120" height="120" version="1.1"
+  xmlns="http://www.w3.org/2000/svg">
+  <defs>
+      <radialGradient id="Gradient"
+            cx="0.5" cy="0.5" r="0.5" fx="0.25" fy="0.25">
+        <stop offset="0%" stop-color="red"/>
+        <stop offset="100%" stop-color="blue"/>
+      </radialGradient>
+  </defs>
+  <rect x="10" y="10" rx="15" ry="15" width="100" height="100"
+        fill="url(#Gradient)" stroke="black" stroke-width="2"/>
+  <circle cx="60" cy="60" r="50" fill="transparent" stroke="white" stroke-width="2"/>
+  <circle cx="35" cy="35" r="2" fill="white" stroke="white"/>
+  <circle cx="60" cy="60" r="2" fill="white" stroke="white"/>
+  <text x="38" y="40" fill="white" font-family="sans-serif" font-size="10pt">(fx,fy)</text>
+  <text x="63" y="63" fill="white" font-family="sans-serif" font-size="10pt">(cx,cy)</text>
+</svg>
+```
+<?xml version="1.0" standalone="no"?>
+<svg width="120" height="120" version="1.1"
+  xmlns="http://www.w3.org/2000/svg">
+  <defs>
+      <radialGradient id="Gradient"
+            cx="0.5" cy="0.5" r="0.5" fx="0.25" fy="0.25">
+        <stop offset="0%" stop-color="red"/>
+        <stop offset="100%" stop-color="blue"/>
+      </radialGradient>
+  </defs>
+  <rect x="10" y="10" rx="15" ry="15" width="100" height="100"
+        fill="url(#Gradient)" stroke="black" stroke-width="2"/>
+  <circle cx="60" cy="60" r="50" fill="transparent" stroke="white" stroke-width="2"/>
+  <circle cx="35" cy="35" r="2" fill="white" stroke="white"/>
+  <circle cx="60" cy="60" r="2" fill="white" stroke="white"/>
+  <text x="38" y="40" fill="white" font-family="sans-serif" font-size="10pt">(fx,fy)</text>
+  <text x="63" y="63" fill="white" font-family="sans-serif" font-size="10pt">(cx,cy)</text>
+</svg>
+
+#### spreadMethod
+
+线性渐变和径向渐变都需要一些额外的属性用于描述渐变过程，这里我希望额外提及一个spreadMethod属性，该属性控制了当渐变到达终点的行为，但是此时该对象尚未被填充颜色.
+- pad 就是我们之前看到的，即当渐变到达终点时，最终的偏移颜色被用于填充对象剩下的空间
+- reflect reflect会让渐变一直持续下去，不过它的效果是与渐变本身是相反的，以100%偏移位置的颜色开始，逐渐偏移到0%位置的颜色，然后再回到100%偏移位置的颜色
+- repeat repeat也会让渐变继续，但是它不会像reflect那样反向渐变，而是跳回到最初的颜色然后继续渐变。
+
+```svg
+<?xml version="1.0" standalone="no"?>
+<svg width="220" height="220" version="1.1" xmlns="http://www.w3.org/2000/svg">
+  <defs>
+      <radialGradient id="GradientPad"
+            cx="0.5" cy="0.5" r="0.4" fx="0.75" fy="0.75"
+            spreadMethod="pad">
+        <stop offset="0%" stop-color="red"/>
+        <stop offset="100%" stop-color="blue"/>
+      </radialGradient>
+      <radialGradient id="GradientReflect"
+            cx="0.5" cy="0.5" r="0.4" fx="0.75" fy="0.75"
+            spreadMethod="reflect">
+        <stop offset="0%" stop-color="red"/>
+        <stop offset="100%" stop-color="blue"/>
+      </radialGradient>
+      <radialGradient id="GradientRepeat"
+            cx="0.5" cy="0.5" r="0.4" fx="0.75" fy="0.75"
+            spreadMethod="repeat">
+        <stop offset="0%" stop-color="red"/>
+        <stop offset="100%" stop-color="blue"/>
+      </radialGradient>
+      <radialGradient id="GradientReflect"
+            cx="0.5" cy="0.5" r="0.4" fx="0.75" fy="0.75"
+            spreadMethod="reflect">
+        <stop offset="0%" stop-color="red"/>
+        <stop offset="100%" stop-color="blue"/>
+      </radialGradient>
+  </defs>
+  <rect x="10" y="10" rx="15" ry="15" width="100" height="100" fill="url(#GradientPad)"/>
+  <rect x="10" y="120" rx="15" ry="15" width="100" height="100" fill="url(#GradientRepeat)"/>
+  <rect x="120" y="120" rx="15" ry="15" width="100" height="100" fill="url(#GradientReflect)"/>
+  <text x="15" y="30" fill="white" font-family="sans-serif" font-size="12pt">Pad</text>
+  <text x="15" y="140" fill="white" font-family="sans-serif" font-size="12pt">Repeat</text>
+  <text x="125" y="140" fill="white" font-family="sans-serif" font-size="12pt">Reflect</text>
+</svg>
+
+```
+<?xml version="1.0" standalone="no"?>
+<svg width="220" height="220" version="1.1" xmlns="http://www.w3.org/2000/svg">
+  <defs>
+      <radialGradient id="GradientPad"
+            spreadMethod="pad"
+            cx="0.5" cy="0.5" r="0.4" fx="0.25" fy="0.25">
+        <stop offset="0%" stop-color="red"/>
+        <stop offset="100%" stop-color="blue"/>
+      </radialGradient>
+      <radialGradient id="GradientReflect"
+            cx="0.5" cy="0.5" r="0.4" fx="0.25" fy="0.25"
+            spreadMethod="reflect">
+        <stop offset="0%" stop-color="red"/>
+        <stop offset="100%" stop-color="blue"/>
+      </radialGradient>
+      <radialGradient id="GradientRepeat"
+            spreadMethod="repeat"
+            cx="0.5" cy="0.5" r="0.4" fx="0.25" fy="0.25">
+        <stop offset="0%" stop-color="red"/>
+        <stop offset="100%" stop-color="blue"/>
+      </radialGradient>
+  </defs>
+  <rect x="10" y="10" rx="15" ry="15" width="100" height="100"
+        fill="url(#GradientPad)" stroke="black" stroke-width="2"/>
+  <rect x="10" y="120" rx="15" ry="15" width="100" height="100"
+    fill="url(#GradientReflect)" stroke="black" stroke-width="2"/>
+  <rect x="120" y="120" rx="15" ry="15" width="100" height="100"
+        fill="url(#GradientRepeat)" stroke="black" stroke-width="2"/>
+  <!-- <rect x="10" y="10" rx="15" ry="15" width="100" height="100" fill="url(#GradientPad)"/>
+  <rect x="10" y="120" rx="15" ry="15" width="100" height="100" fill="url(#GradientRepeat)"/>
+  <rect x="120" y="120" rx="15" ry="15" width="100" height="100" fill="url(#GradientReflect)"/> -->
+  <text x="15" y="30" fill="white" font-family="sans-serif" font-size="12pt">Pad</text>
+  <text x="15" y="140" fill="white" font-family="sans-serif" font-size="12pt">Reflect</text>
+  <text x="125" y="140" fill="white" font-family="sans-serif" font-size="12pt">Repeat</text>
+</svg>
+
+#### gradientUnits
+
+该属性有两个值，默认值为objectBoundingBox
+- objectBoundingBox 我们目前看到的效果都是在这种系统下的，它大体上定义了对象的渐变大小范围，所以你只要指定从0到1的坐标值，渐变就会自动的缩放到对象相同大小
+- userSpaceOnUse 使用绝对单元，所以你必须知道对象的位置，并将渐变放在同样地位置上。上例中的radialGradient需要被重写成
+
+## 图案
+
+在我看来patterns（图案）是SVG中用到的最让人混淆的填充类型之一。它的功能非常强大，所以我认为他们值得讨论一下并且我们应至少对他们有最基本的了解。跟渐变一样，`<pattern>`需要放在SVG文档的`<defs>`内部。
+
+```svg
+<?xml version="1.0" standalone="no"?>
+<svg width="200" height="200" xmlns="http://www.w3.org/2000/svg" version="1.1">
+  <defs>
+    <linearGradient id="Gradient1">
+      <stop offset="5%" stop-color="white"/>
+      <stop offset="95%" stop-color="blue"/>
+    </linearGradient>
+    <linearGradient id="Gradient2" x1="0" x2="0" y1="0" y2="1">
+      <stop offset="5%" stop-color="red"/>
+      <stop offset="95%" stop-color="orange"/>
+    </linearGradient>
+    <pattern id="Pattern" x="0" y="0" width=".25" height=".25">
+      <rect x="0" y="0" width="50" height="50" fill="skyblue"/>
+      <rect x="0" y="0" width="25" height="25" fill="url(#Gradient2)"/>
+      <circle cx="25" cy="25" r="20" fill="url(#Gradient1)" fill-opacity="0.5"/>
+    </pattern>
+  </defs>
+  <rect fill="url(#Pattern)" stroke="black" x="0" y="0" width="200" height="200"/>
+</svg>
+
+<?xml version="1.0" standalone="no"?>
+<svg width="300" height="300" xmlns="http://www.w5.org/2000/svg/" version="1.1">
+  <defs>
+    <linearGradient id="Gradient111">
+      <stop offset="5%" stop-color="white"/>
+      <stop offset="95%" stop-color="blue"/>
+    </linearGradient>
+    <linearGradient id="Gradient222" x1="0" x2="0" y1="0" y2="1">
+      <stop offset="5%" stop-color="red"/>
+      <stop offset="95%" stop-color="orange"/>
+    </linearGradient>
+    <pattern id="Pattern12" x="0" y="0" width=".25" height=".25">
+      <rect x="0" y="0" width="50" height="50" fill="skyblue"/>
+      <rect x="0" y="0" width="25" height="25" fill="url(#Gradient222)"/>
+      <circle cx="25" cy="25" r="20" fill="url(#Gradient111)" fill-opacity="0.5"/>
+    </pattern>
+  </defs>
+  <rect fill="url(#Pattern12)" stroke="black" x="0" y="0" width="300" height="300"/>
+</svg>
+```
+
+改变__对象__大小，并不能自适应
+
+<?xml version="1.0" standalone="no"?>
+<svg width="200" height="200" xmlns="http://www.w4.org/2000/svg/" version="1.1">
+  <defs>
+    <linearGradient id="Gradient123">
+      <stop offset="5%" stop-color="white"/>
+      <stop offset="95%" stop-color="blue"/>
+    </linearGradient>
+    <linearGradient id="Gradient213" x1="0" x2="0" y1="0" y2="1">
+      <stop offset="5%" stop-color="red"/>
+      <stop offset="95%" stop-color="orange"/>
+    </linearGradient>
+    <pattern id="Pattern" x="0" y="0" width=".25" height=".25">
+      <rect x="0" y="0" width="50" height="50" fill="skyblue"/>
+      <rect x="0" y="0" width="25" height="25" fill="url(#Gradient213)"/>
+      <circle cx="25" cy="25" r="20" fill="url(#Gradient123)" fill-opacity="0.5"/>
+    </pattern>
+  </defs>
+  <rect fill="url(#Pattern)" stroke="black" x="0" y="0" width="200" height="200"/>
+</svg>
+
+<?xml version="1.0" standalone="no"?>
+<svg width="300" height="300" xmlns="http://www.w5.org/2000/svg/" version="1.1">
+  <defs>
+    <linearGradient id="Gradient111">
+      <stop offset="5%" stop-color="white"/>
+      <stop offset="95%" stop-color="blue"/>
+    </linearGradient>
+    <linearGradient id="Gradient222" x1="0" x2="0" y1="0" y2="1">
+      <stop offset="5%" stop-color="red"/>
+      <stop offset="95%" stop-color="orange"/>
+    </linearGradient>
+    <pattern id="Pattern12" x="0" y="0" width=".25" height=".25">
+      <rect x="0" y="0" width="50" height="50" fill="skyblue"/>
+      <rect x="0" y="0" width="25" height="25" fill="url(#Gradient222)"/>
+      <circle cx="25" cy="25" r="20" fill="url(#Gradient111)" fill-opacity="0.5"/>
+    </pattern>
+  </defs>
+  <rect fill="url(#Pattern12)" stroke="black" x="0" y="0" width="300" height="300"/>
+</svg>
+
+patternUnits
+- objectBoundingBox 默认
+- userSpaceOnUse
+
+patternContentUnits
+- userSpaceOnUse 默认
+- objectBoundingBox
+
+这意味着除非你至少指定其中一个属性值（patternContentUnits或patternUnits），否则在pattern中绘制的形状将与pattern元素使用的坐标系不同.
+
+如果__对象__改变了大小，pattern会自适应其大小，但是对象里面的内容不会自适应。如上图__对象__`rect`的大小增大了，内容并没有增大
+
+```svg
+<?xml version="1.0" standalone="no"?>
+<svg width="300" height="300" xmlns="http://www.w6.org/2000/svg/" version="1.1">
+  <defs>
+    <linearGradient id="Gradient11">
+      <stop offset="5%" stop-color="white"/>
+      <stop offset="95%" stop-color="blue"/>
+    </linearGradient>
+    <linearGradient id="Gradient22" x1="0" x2="0" y1="0" y2="1">
+      <stop offset="5%" stop-color="red"/>
+      <stop offset="95%" stop-color="orange"/>
+    </linearGradient>
+    <pattern id="Pattern123" width=".25" height=".25" patternContentUnits="objectBoundingBox">
+      <rect x="0" y="0" width=".25" height=".25" fill="skyblue"/>
+      <rect x="0" y="0" width=".125" height=".125" fill="url(#Gradient22)"/>
+      <circle cx=".125" cy=".125" r=".1" fill="url(#Gradient11)" fill-opacity="0.5"/>
+    </pattern>
+  </defs>
+  <rect fill="url(#Pattern123)" stroke="black" x="0" y="0" width="300" height="300"/>
+</svg>
+```
+
+设置了patternContentUnits="objectBoundingBox",并改变了取值单位后，就可以自适应了
+
+<?xml version="1.0" standalone="no"?>
+<svg width="300" height="300" xmlns="http://www.w6.org/2000/svg/" version="1.1">
+  <defs>
+    <linearGradient id="Gradient11">
+      <stop offset="5%" stop-color="white"/>
+      <stop offset="95%" stop-color="blue"/>
+    </linearGradient>
+    <linearGradient id="Gradient22" x1="0" x2="0" y1="0" y2="1">
+      <stop offset="5%" stop-color="red"/>
+      <stop offset="95%" stop-color="orange"/>
+    </linearGradient>
+    <pattern id="Pattern123" width=".25" height=".25" patternContentUnits="objectBoundingBox">
+      <rect x="0" y="0" width=".25" height=".25" fill="skyblue"/>
+      <rect x="0" y="0" width=".125" height=".125" fill="url(#Gradient22)"/>
+      <circle cx=".125" cy=".125" r=".1" fill="url(#Gradient11)" fill-opacity="0.5"/>
+    </pattern>
+  </defs>
+  <rect fill="url(#Pattern123)" stroke="black" x="0" y="0" width="300" height="300"/>
+</svg>
+
+## 文本
+
+在一个SVG文档中，<text>元素内部可以放任何的文字。
+
+```svg
+<?xml version="1.0" standalone="no"?>
+<svg width="300" height="300" xmlns="http://www.w3.org/2000/svg" version="1.1">
+  <text x="10" y="10">Hello World!</text>
+  <text>
+  <tspan font-weight="bold" fill="red">This is bold and red</tspan>
+</text>
+</svg>
+```
+<svg>
+  <text x="10" y="10" text-anchor="start">Hello World!</text>
+  <text>
+    <tspan font-weight="bold" fill="red">This is bold and red</tspan>
+  </text>
+</svg>
+
+
