--- a/website/blog/2018-06-22-css.md
+++ b/website/blog/2018-06-22-css.md
@@ -4,6 +4,7 @@ author: Shiyong Yin
 ---
 
 ## box-sizing
+
 2个取值(inherit不计算在内)
 - content-box 简单来说，整个元素宽度=width+border+margin+padding，高度类似
 - border-box  简单来说，整个元素宽度=width，width=内容宽度+border+margin+padding
@@ -38,5 +39,140 @@ author: Shiyong Yin
     </div>
   </div>
 </div>
+
+## flex布局
+
+```css
+.a {
+  flex: 1 1 100px;
+}
+```
+这表示什么意思？
+
+上面的样式等价于
+```css
+.a {
+  flex-grow: 1; //扩展比率
+  flex-shrink: 1; //收缩比率
+  flex-basic: 100px; //伸缩基准值
+}
+```
+
+### flex-shrink示例
+
+> wrapper的总长度是500，根据基准值算出的总长度是200+200+200=600，显然超出了，所以根据收缩比率进行压缩
+> (600-500) / (1+2+3) = 16.666，那么green块收缩16.666x1，black块收缩16.666x2，blue块收缩16.666x3
+> 所以最后的宽度green = 200 - 16.666x1, 同理，black,blue类似
+
+<style>
+.ysy-f-wrapper {
+  display: flex;
+  width: 500px;
+  height: 50px;
+}
+.ysy-f-green{
+  flex: 1 1 200px;
+  background: green;
+  height: 50px;
+}
+.ysy-f-black{
+  flex: 2 2 200px;
+  background: black;
+  height: 50px;
+}
+.ysy-f-blue{
+  flex: 3 3 200px;
+  height: 50px;
+  background: blue;
+}
+</style>
+
+```html
+<style>
+.ysy-f-wrapper {
+  display: flex;
+  width: 500px;
+  height: 50px;
+}
+.ysy-f-green{
+  flex: 1 1 200px;
+  background: green;
+  height: 50px;
+}
+.ysy-f-black{
+  flex: 2 2 200px;
+  background: black;
+  height: 50px;
+}
+.ysy-f-blue{
+  flex: 3 3 200px;
+  height: 50px;
+  background: blue;
+}
+</style>
+<div class="ysy-f-wrapper">
+  <div class="ysy-f-green"></div>
+  <div class="ysy-f-black"></div>
+  <div class="ysy-f-blue"></div>
+</div>
+```
+
+<div class="ysy-f-wrapper">
+  <div class="ysy-f-green"></div>
+  <div class="ysy-f-black"></div>
+  <div class="ysy-f-blue"></div>
+</div>
+
+### flex-grow示例
+
+这个省略了，比flex-shrink好理解
+
+### 作业
+要求如下
+1. 内容居中，左右边距10px
+2. A元素垂直居中
+3. A元的内容垂直居中
+
+<style>
+.ysy-wrapper{
+  display: flex;
+  background: gray;
+  width: 100%;
+  /* width: 500px; */
+  height: 200px;
+}
+.ysy-space{
+  flex: 0 0 10px;
+  height: 200px;
+  background: gray;
+}
+.ysy-content{
+  flex: 1;
+  background: #f8f8f8;
+  height: 200px;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+}
+.a-block{
+  width: 100px;
+  height: 50px;
+  background: blue;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+</style>
+
+<div class="ysy-wrapper">
+  <div class="ysy-space"></div>
+  <div class="ysy-content">
+  <div class="a-block">A</div>
+  </div>
+  <div class="ysy-space"></div>
+</div>
+
+
 
 
