--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -4,7 +4,7 @@
     "next": "Next",
     "previous": "Previous",
     "tagline": "The Diary of Shiyong Yin",
-    "doc1": "Latin-ish",
+    "doc1": "doc1",
     "doc2": "document number 2",
     "doc3": "This is document number 3",
     "doc4": "Other Document",
@@ -13,8 +13,7 @@
     "GitHub": "GitHub",
     "Docusaurus": "Docusaurus",
     "First Category": "First Category",
-    "Second Category": "Second Category",
-    "Example Page": "Example Page"
+    "Second Category": "Second Category"
   },
   "pages-strings": {
     "Help Translate|recruit community translators for your project": "Help Translate",
