--- a/website/blog/2018-06-16-CV.md
+++ b/website/blog/2018-06-16-CV.md
@@ -26,17 +26,39 @@ __求职意向：前端工程师__
 
 ## 工作经历
 
+<div class="road">
 <div class="cv-wrapper">
-<div>2014.07~至今</div>
-<div>去哪儿&middot;大住宿</div>     
-<div>前端工程师</div>
-<div>北京</div>
+  <div class="road-head"></div>
+  <div>2014.07~2018.07</div>
+  <div>去哪儿&middot;大住宿</div>     
+  <div>前端工程师</div>
+  <div>北京</div>
 </div>
 
 > 去哪儿是中国领先的旅游搜索引擎，去哪儿是目前全球最大的中文在线旅行网站
 
 业务上
-- 参与__5__个web网站、__1__个公众号、__1__个H5和__2__个RN项目的开发，目前为<span class="centers">前端负责人</span>
+- 参与__5__个web网站、__1__个公众号、__1__个H5和__2__个RN项目的开发，目前为前端负责人
+- 酒店业务华为对接，协调团结__10__多个小组近__30__人，推动项目的发展，按时交付
+
+技术上
+- 设计开发任务模板系统，提高运营效率__100__%，省__50__%成本，获年度优秀项目奖(__10,000__元)
+- 设计开发npm包q-antd，提高项目开发效率__30__%，提高项目易维护性__30__%
+- 优化去哪儿前端构建工具packing，新建页面错误率降为__0__，新建页面节省__50__%时间
+- 设计开发grunt-i19n插件，准确率提高到__100__%，节省__50__%工作时间
+
+<div class="cv-wrapper">
+<div class="road-head"></div>
+  <div>2018.07~2018.11</div>
+  <div>货车帮&middot;大客户</div>     
+  <div>前端工程师</div>
+  <div>成都</div>
+</div>
+
+> 去哪儿是中国领先的旅游搜索引擎，去哪儿是目前全球最大的中文在线旅行网站
+业务上
+
+- 参与__5__个web网站、__1__个公众号、__1__个H5和__2__个RN项目的开发
 
 - 酒店业务华为对接，协调团结__10__多个小组近__30__人，推动项目的发展，按时交付
 
@@ -48,25 +70,26 @@ __求职意向：前端工程师__
 - 优化去哪儿前端构建工具packing，新建页面错误率降为__0__，新建页面节省__50__%时间
 
 - 设计开发grunt-i19n插件，准确率提高到__100__%，节省__50__%工作时间
+</div>
 
 爱折腾，知识面广，吸收了travis和jest等使得开发效率、正确率和规范化大大提高
 
 ## 工作技能
 
-- 掌握JavaScript、Vue、React、React Native、~~Avalon~~、Angular
-- 熟悉github、travis、~~circle~~、__jest__、enzyme、eslint、__prettier__
+- 掌握JavaScript、Vue、React、React Native
+- 熟悉github、travis、__jest__、enzyme、eslint、__prettier__
 - 熟悉node、socket.io、__packing__、gulp、grunt、webpack、bash、python、django
 - 熟悉__mobx__、rxjs、redux
 - 熟悉iview、antd
 - 熟悉ajax、CORS、http、websocket
-- 熟悉jquery、html、pug、handlerbars、css
+- 熟悉jquery、html、pug、css
 
 ## 自我评价
 
 喜欢逛github，研究优秀的项目，从中学习新知识和牛逼的地方
 
 <style scoped>
-  /* .fixedHeaderContainer,
+  .fixedHeaderContainer,
 .postHeader,
 #docsNav,
 .onPageNav,
@@ -91,6 +114,28 @@ blockquote{
 }
 .centers {
     background: #d8d8d8;
-} */
+}
+.road {
+  border-left: 1px solid deepskyblue;
+  padding-left: 15px;
+  position: relative;
+}
+.road-head {
+  position: absolute;
+  top: 5px;
+  left: -21px;
+  content: "";
+  width: 0;
+  background: #555;
+  height: 0;
+  border: 6px solid deepskyblue;
+  border-radius: 10px;
+}
+.road p {
+  margin-bottom: 0;
+}
+li p {
+  margin-top: 0.5em;
+}
 </style>
 
