--- a/website/blog/2018-06-25-attack.md
+++ b/website/blog/2018-06-25-attack.md
@@ -12,6 +12,7 @@ author: Shiyong Yin
 
 > Cross—Site Request Forgery(伪造)
 > 跨站点请求伪造
+> 优秀博文 https://www.cnblogs.com/shytong/p/5308667.html
 
 攻击过程
 1. A访问站点B，并登陆
