--- a/website/blog/2018-06-25-module.md
+++ b/website/blog/2018-06-25-module.md
@@ -76,6 +76,10 @@ seajs.use(['myModule.js'], function(my){
 });
 ```
 
+> seajs原理参阅：
+> - https://www.cnblogs.com/ada-zheng/p/4330506.html
+> - https://www.cnblogs.com/jfmblog/p/5650979.html
+
 ## AMD与CMD区别
 
 下面的例子一目了然
